Salesforce CPQ/main/default/objects/QuoteLinePricingGuidance__c/fields/GuidanceUsed__c.field-meta.xml
<CustomField>
    <fullName>GuidanceUsed__c</fullName>
    <formula>IF(QuoteLine__r.Discount__c == QuoteLine__r.Guidance__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A sales rep has accepted the target discount from this pricing guidance in the quote line editor.</inlineHelpText>
    <label>Guidance Used</label>
    <type>Checkbox</type>
</CustomField>