Salesforce CPQ/main/default/objects/QuoteLinePricingGuidance__c/fields/IsViewed__c.field-meta.xml
<CustomField>
    <fullName>IsViewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A sales rep has viewed this pricing guidance in the quote line editor.</description>
    <label>Viewed</label>
    <type>Checkbox</type>
</CustomField>