Salesforce CPQ/main/default/objects/QuoteLinePricingGuidance__c/fields/Norm__c.field-meta.xml
<CustomField>
    <fullName>Norm__c</fullName>
    <description>Middle-range discount based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</description>
    <inlineHelpText>Middle-range discount based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</inlineHelpText>
    <label>Norm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>