Salesforce CPQ/main/default/objects/QuoteLinePricingGuidance__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The quote containing the quote line related to this pricing guidance.</description>
    <inlineHelpText>The quote containing the quote line related to this pricing guidance.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Line Pricing Guidance</relationshipLabel>
    <relationshipName>QuoteLinePricingGuidance</relationshipName>
    <type>Lookup</type>
</CustomField>