Salesforce CPQ/main/default/objects/QuoteLinePricingGuidance__c/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <description>The quote line related to this pricing guidance.</description>
    <inlineHelpText>The quote line related to this pricing guidance.</inlineHelpText>
    <label>Quote Line</label>
    <referenceTo>QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Line Pricing Guidance</relationshipLabel>
    <relationshipName>QuoteLinePricingGuidance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>